--- a/packages/energy/geysers.yaml
+++ b/packages/energy/geysers.yaml
@@ -22,7 +22,7 @@ script:
   ######################################################################
   # Example:
   ######################################################################
-  # - service: geyser_on_mainbedroom
+  # - service: script.geyser_on_mainbedroom
   #   data:
   #      N/A
   ######################################################################
@@ -44,6 +44,8 @@ script:
       - service: switch.turn_on
         data:
           entity_id: switch.main_bathroom_geyser
+      # Turn off front geyser
+      - service: script.geyser_off_front
       # if before 6am in the morning then also set goodwe dod to 1% if forecast less than 30kWh
       - condition: template
         value_template: >-
@@ -60,7 +62,7 @@ script:
   ######################################################################
   # Example:
   ######################################################################
-  # - service: geyser_on_mainbedroom
+  # - service: script.geyser_on_mainbedroom
   #   data:
   #      N/A
   ######################################################################
@@ -82,6 +84,8 @@ script:
       - service: switch.turn_on
         data:
           entity_id: switch.front_bathroom_geyser
+      # Turn off front geyser
+      - service: script.geyser_off_main
       # if before 6am in the morning then also set goodwe dod to 1% if forecast less than 30kWh
       - condition: template
         value_template: >-
@@ -93,6 +97,27 @@ script:
         data:
           value: 1
 
+  geyser_off_front:
+    sequence:
+      - service: switch.turn_off
+        data:
+          entity_id: switch.front_bathroom_geyser
+      - delay: '00:00:01' # Waits 1 seconds
+      - service: timer.finish
+        data_template:
+          entity_id: timer.front_geyser
+
+  geyser_off_main:
+    sequence:
+      - service: switch.turn_off
+        data:
+          entity_id: switch.main_bathroom_geyser
+      - delay: '00:00:01' # Waits 1 seconds
+      - service: timer.finish
+        data_template:
+          entity_id: timer.main_geyser
+
+
 automation:
   ### Main Geyser ###
   # Main geyser on based on input time
@@ -101,7 +126,7 @@ automation:
       - platform: template
         value_template: "{{ states('sensor.time') == (state_attr('input_datetime.main_geyser_on_time', 'timestamp') | int | timestamp_custom('%H:%M', False)) }}"
       - platform: time
-        at: '13:30:00'
+        at: '14:00:00'
       - platform: numeric_state
         entity_id: sensor.front_bathroom_geyser_power
         below: '50'
@@ -113,7 +138,7 @@ automation:
             entity_id: timer.loadshedding_slot
             state: 'idle'
           - condition: template
-            value_template: "{{ ('11:00' <= states('sensor.time') <= '14:00') }}"
+            value_template: "{{ ('12:40' <= states('sensor.time') <= '14:00') }}"
           sequence:
             - service: script.geyser_on_mainbedroom
         # Turn on early AM and late PM only if haven't been on in previous 6 hours
@@ -128,7 +153,7 @@ automation:
             for:
               hours: 6
           - condition: numeric_state
-            entity_id: sensor.average_temperature_outside_last_2_days
+            entity_id: sensor.average_temperature_outside_last_1_day
             below: '21'
           - condition: template
             value_template: "{{ ('02:00' <= states('sensor.time') <= '06:00') or ('14:00' <= states('sensor.time') < '18:05') }}"
@@ -203,7 +228,7 @@ automation:
       - platform: template
         value_template: "{{ states('sensor.time') == (state_attr('input_datetime.main_geyser_on_time', 'timestamp') | int | timestamp_custom('%H:%M', False)) }}"
       - platform: time
-        at: '11:30:00'
+        at: '12:00:00'
     action:
       - choose:
         # Turn on between 11am and 2pm for sun times
@@ -212,7 +237,7 @@ automation:
             entity_id: timer.loadshedding_slot
             state: 'idle'
           - condition: template
-            value_template: "{{ ('11:00' <= states('sensor.time') <= '14:00') }}"
+            value_template: "{{ ('12:00' <= states('sensor.time') <= '14:00') }}"
           sequence:
             - service: script.geyser_on_front
         # Turn on early AM and late PM only if haven't been on in previous 6 hours
