--- a/packages/energy/goodwe_mode.yaml
+++ b/packages/energy/goodwe_mode.yaml
@@ -59,7 +59,7 @@ automation:
         target:
           entity_id: select.inverter_operation_mode
         data:
-          option: General mode
+          option: Backup mode
       - alias: "Log action taken"
         service: script.log
         data:
