--- a/packages/energy/goodwe_dis_charge_times.yaml
+++ b/packages/energy/goodwe_dis_charge_times.yaml
@@ -1,49 +1,92 @@
 sensor:
   - platform: average
-    name: 'GoodWe Average Battery Charge Rate'
+    name: 'GoodWe Average Battery Dis/Charge Rate'
     duration:
       minutes: 5
     entities:
-      - sensor.battery_charge_power
+      - sensor.goodwe_pbattery1
   - platform: template
     sensors:
-      # This works, but needs average charge sensor to make the estimated time more reliable
+      # Battery template sensors
+      battery_available:
+        friendly_name: "Battery Available"
+        unit_of_measurement: 'kWh'
+        icon_template: "mdi:battery-high"
+        value_template: >-
+          {% set battery_capacity = 14 %}
+          {% set battery_current = (battery_capacity * (states('sensor.goodwe_battery_soc')|int/100))|round(2) %}
+          {{ battery_current }}
+      battery_available_dod:
+        friendly_name: "Battery Available (DoD)"
+        unit_of_measurement: 'kWh'
+        icon_template: "mdi:battery-high"
+        value_template: >-
+          {% set battery_capacity = 14 %}
+          {% set battery_dod_ongrid = states('sensor.goodwe_depth_of_discharge_on_grid') %}
+          {% set battery_dod_offgrid = 20 %}
+          {% set battery_dod = iif(is_state('sensor.goodwe_work_mode_label', 'Normal (On-Grid)'), battery_dod_ongrid, battery_dod_offgrid) %}
+          {% set battery_current = (battery_capacity * ((battery_dod|int - states('sensor.goodwe_battery_soc')|int)/100))|round(2) %}
+          {{ battery_current }}
+      #To charge: {{ battery_to_charge }}
+      battery_tocharge:
+        friendly_name: "Battery Need Charge"
+        unit_of_measurement: 'kWh'
+        icon_template: "mdi:battery-high"
+        value_template: >-
+          {% set battery_capacity = 14 %}
+          {% set battery_current = (battery_capacity * (states('sensor.goodwe_battery_soc')|int/100))|round(2) %}
+          {% set battery_to_charge = (battery_capacity - battery_current)|round(2) %}
+          {{ battery_to_charge }}
+      # Remaining minutes
       goodwe_battery_charging_remaining_minutes: 
+        icon_template: "mdi:battery-high"
         value_template: >
-          {% set x = states('sensor.battery_tocharge') | float(0) %}
-          {% set y = states('sensor.goodwe_average_battery_charge_rate') | float(0) %}
-          {% if y < 0 %}
-            Battery Discharging
-          {% elif y == 0 %}
-            Battery Idle/Discharging
-          {% else %}
+          {% set y = states('sensor.goodwe_average_battery_dis_charge_rate') | float(0) %}
+          {% if y == 0 %}
+            Idle
+          {% elif y > 99 %}
+            {% set x = states('sensor.battery_available_dod') | float(0) %}
             {% set ct = x / (y/1000) * 60 %}
             {% if ct == 0 %}
               Unknown
             {% else %}
               {{ ct | int }}
             {% endif %}
+          {% elif y < -99 %}
+            {% set x = states('sensor.battery_tocharge') | float(0) %}
+            {% set ct = x / ((y/1000)*-1) * 60 %}
+            {% if ct == 0 %}
+              Unknown
+            {% else %}
+              {{ ct | int }}
+            {% endif %}
+          {% elif y != 0 %}
+            Idle
+          {% else %}
+            Unknown
           {% endif %}
-      # Display in H:M if more than 60 minutes
+      # Display in HhMm (was H:M) if more than 60 minutes
       goodwe_battery_charging_remaining_time:
+        icon_template: "mdi:battery-high"
         value_template: >
           {% set ct = states('sensor.goodwe_battery_charging_remaining_minutes') | int %}
           {% if ct == 0 %}
-            Unknown
+            Idle
           {% elif ct > 60 %}
-            {{ ct // 60 }}:{{ '{:0>2d}'.format((ct%60)|int) }} hours
+            {{ ct // 60 }}h{{ '{:0>2d}'.format((ct%60)|int) }}m
           {% else %}
-            {{ ct }} minutes
+            {{ ct }}m
           {% endif %}
       # Display finish time?
       goodwe_battery_charging_finish_time:
+        icon_template: "mdi:battery-high"
         value_template: >
           {% if is_state('sensor.goodwe_battery_charging_remaining_minutes','Unknown') %}
             Unknown
           {% else %}
             {% set ct = states('sensor.goodwe_battery_charging_remaining_minutes') | int %}
             {% if ct == 0 %}
-              Done
+              Idle
             {% else %}
               {{ (as_timestamp(now()) + ct|int * 60) | timestamp_custom("%H:%M") }}
             {% endif %}
